# ToyInterpreter

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  array-util.h  compile.c  compile.h  enum-util.h  lex.c  lex.h  macros.h  main.c  op_util.h  parse.c  parse.h  run.c  run.h  scope.c  scope.h  stack.c  stack.h  test.php  util.c  util.h
builtins/: std.c  std.h
crossplatform/: endian.h  std.h  stdnoreturn.h
optimize/: instruction.c  instruction.h  optimize.c  optimize.h  stack.c  stack.h  threeaddrcode.c  threeaddrcode.h
tests/: add0.php  binop.expect  binop.php  compiler.expect  compiler.php  const.expect  const.php  for.php  fun.expect  fun.php  funcundefined.expect  funcundefined.php  gettype.php  html.expect  html.php  if.php  ifstr.php  lineno.php  mul4.expect  mul4.php  not.expect  not.php  null.php  parammismatch.expect  parammismatch.php  postfix.php  record  run  shift.php  test.expect  test.php  while.php
tests/type/: binop.expect  binop.php  gettype.expect
